--- a/css/style.css
+++ b/css/style.css
@@ -87,7 +87,7 @@ main .masthead-container .masthead {
   padding-top: 12.5rem;
 }
 main .masthead-container .masthead .col-md-7:nth-of-type(1) {
-  padding-right: 3rem;
+  padding-right: 8rem;
 }
 @media (max-width: 575.98px) {
   main .masthead-container .masthead .col-md-7:nth-of-type(1) {
@@ -146,13 +146,8 @@ main .masthead-container .masthead .masthead-link {
   line-height: 1.5;
   box-shadow: inset 0 -1rem 12px -7px rgba(61, 220, 132, 0.4);
 }
-main .masthead-container .masthead .masthead-link:nth-of-type(2) {
-  margin-left: 2rem;
-}
-@media (max-width: 575.98px) {
-  main .masthead-container .masthead .masthead-link:nth-of-type(2) {
-    margin-left: 0;
-  }
+main .masthead-container .masthead .masthead-link:nth-of-type(1) {
+  margin-right: 2rem;
 }
 main .masthead-container .masthead .highlight {
   font-weight: bold;
@@ -170,12 +165,9 @@ main .content-container {
 }
 main .content-container .partners-layout span {
   margin: 0.5rem 0;
-}
-@media (max-width: 575.98px) {
-  main .content-container .partners-layout span {
-    text-overflow: ellipsis;
-    overflow: hidden;
-  }
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
 }
 @media (max-width: 575.98px) {
   main .content-container .partners-layout .col-3 {
@@ -185,6 +177,23 @@ main .content-container .partners-layout span {
 @media (max-width: 575.98px) {
   main .content-container .partners-layout {
     margin: 0 !important;
+  }
+}
+main .content-container .timezone-info {
+  padding-right: 8rem;
+}
+@media (max-width: 575.98px) {
+  main .content-container .timezone-info {
+    padding-right: 0;
+  }
+}
+main .content-container .timezone-image {
+  width: 100%;
+  height: auto;
+}
+@media (max-width: 575.98px) {
+  main .content-container .timezone-image {
+    display: none;
   }
 }
 main .content-container .faq-layout .col-md-6 {
@@ -229,8 +238,8 @@ main .content-container .faq-layout .faq-link {
   position: relative;
   font-weight: 700;
   text-decoration: none;
-  line-height: 1.5;
-  padding-bottom: 0.1rem;
+  line-height: 1;
+  padding-bottom: 0rem;
   box-shadow: inset 0 -0.75rem 7px -7px rgba(61, 220, 132, 0.4);
 }
 main .content-container .faq-layout .spacer {
