--- a/scss/style.scss
+++ b/scss/style.scss
@@ -121,7 +121,7 @@ main
 
             .col-md-7:nth-of-type(1)
             {
-                padding-right: 3rem;
+                padding-right: 8rem;
 
                 @media (max-width: 575.98px)
                 {
@@ -191,14 +191,9 @@ main
                 line-height: 1.5;
                 box-shadow: inset 0 -1rem 12px -7px $underline-color;
 
-                &:nth-of-type(2)
+                &:nth-of-type(1)
                 {
-                    margin-left: 2rem;
-
-                    @media (max-width: 575.98px)
-                    {
-                        margin-left: 0;
-                    }
+                    margin-right: 2rem;
                 }
             }
 
@@ -226,12 +221,9 @@ main
             span
             {
                 margin: 0.5rem 0;
-
-                @media (max-width: 575.98px)
-                {
-                    text-overflow: ellipsis;
-                    overflow: hidden;
-                }
+                text-overflow: ellipsis;
+                overflow: hidden;
+                white-space: nowrap;
             }
 
             .col-3
@@ -246,6 +238,28 @@ main
             {
                 margin: 0 !important;
             }
+        }
+
+        .timezone-info
+        {
+            padding-right: 8rem;
+
+            @media (max-width: 575.98px)
+            {
+                padding-right: 0;
+            }
+        }
+
+        .timezone-image
+        {
+            width: 100%;
+            height: auto;
+
+            @media (max-width: 575.98px)
+            {
+                display: none;
+            }
+
         }
 
         .faq-layout
@@ -303,8 +317,8 @@ main
                 position: relative;
                 font-weight: 700;
                 text-decoration: none;
-                line-height: 1.5;
-                padding-bottom: 0.1rem;
+                line-height: 1;
+                padding-bottom: 0rem;
                 box-shadow: inset 0 -0.75rem 7px -7px $underline-color;
             }
 
